# r-filestorage

./: .env.template  .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  dependencies.txt
docs/: README-ES.md  README-PT.md  SECURITY-ES.md  SECURITY-PT.md
src/: main.rs  storage.rs
