[package]
name = "r-filestorage"
version = "0.1.0"
edition = "2021"
description = "Microservicio de almacenamiento de archivos via gRPC"
license = "LicenseRef-CUSTOM"
license-file = "LICENSE"
authors = ["HormigaDev <hormigadev7@gmail.com>"]
repository = "https://github.com/HormigaDev/r-filestorage"
keywords = ["grpc", "storage", "rust", "microservice"]
categories = ["network-programming", "filesystem"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
flate2 = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1.0"
dotenv = "0.15"

[build-dependencies]
tonic-build = "0.11"
